src/app/playground/home/home.component.css
:host {
  display: block;
  height: 100%;
  width: 100%;
}

main {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
}

main .mat-icon {
  width: 24px;
  height: 24px;
  font-size: 24px;
}

section {
  height: 100%;
  display: inline-block;
  padding: 10px;
  overflow-y: scroll;
  overflow: hidden;
}

.mat-expansion-panel-header-description {
  justify-content: space-between;
  align-items: center;
}
.mat-expansion-panel-header-title {
  flex-grow: 0;
  width: 160px;
}

.mat-drawer-container,
.mat-drawer-content {
  height: 100%;
}

.mat-drawer {
  width: 570px;
}

.mat-drawer section {
  width: 100%;
  padding: 0px;
}

.mat-drawer textarea[name="swaConfigRules"] {
  top: -1px;
  position: relative;
  resize: none;
  height: 100%;
  width: calc(100% - 20px);
  background-color: white;
  padding: 10px;
}

.mat-drawer {
  overflow: visible;
}
.mat-drawer.mat-drawer-side {
  visibility: visible !important;
}
.toggle-code-editor {
  outline: none;
  position: absolute;
  transform: rotate(-90deg);
  top: 50%;
  left: 502px;
  border: 1px solid #e0e0e0;
  background: white;
  padding: 10px 30px;
  border-radius: 0 0 16px 16px;
  color: #8e8e8e;
  cursor: pointer;
  border-top: white;
}

.content {
  display: flex;
  flex-direction: column;
  padding: 0 60px;
  align-items: stretch;
}

.mat-list-item {
  height: 50px;
}

.mat-list-base .mat-list-item .mat-line:nth-child(n + 2) {
  padding:0 8px;
}

.routes-inspector {
  flex: 2;
}

.routes-logs {
  flex: 1;
  border-radius: 4px;
  position: sticky;
  top: 130px;
}

.routes-logs code {
  display: block;
}

.routes-logs pre {
  margin: 0;
}

.upload-indicator {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  color: #aaa;
  height: 300px;
}

.upload-indicator .mat-icon {
  height: 64px;
  font-size: 64px;
  width: 64px;
}

.mat-form-field {
  padding: 10px;
}

.route-test-container {
  position: sticky;
  top: 0;
  display: flex;
  align-items: flex-end;
  height: 100px;
  background: white;
  z-index: 9999;
}

.route-test-method {
  width: 85px;
}

.route-test-roles {
  flex: 4;
}

.route-test-route {
  flex: 2;
  top: -2px;
  position: relative;
}

.match-true {
  color: rgb(53, 155, 53);
}

.match-false {
  color: rgb(145, 145, 145);
}

mat-chip.mat-chip {
  padding: 2px 2px 3px 8px;
  min-height: 22px;
}

